# fusion-bootcamp

./: README.md  cdf.toml  config.dev.yml  pyproject.toml
.github/: deploy.yaml
.github/workflows/: deploy.yaml
ice-cream-dataops/: build_info.test.yaml  config.prod.yaml  config.test.yaml
ice-cream-dataops/function_local_venvs/oee_timeseries/: run_check.py
ice-cream-dataops/function_local_venvs/oee_timeseries/local_code/: handler.py
ice-cream-dataops/modules/bootcamp/ice_cream_api/functions/icapi_datapoints_extractor/: handler.py  ice_cream_factory_api.py
ice-cream-dataops/modules/bootcamp/ice_cream_api/hosted_extractors/Ice Cream Factory API/timeseries/: Job.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/transformations/: contextualize_ts_assets.Transformation.yaml  create_asset_hierarchy.schedule.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/workflows/: wf_icapi_data_pipeline.WorkFlow.yaml  wf_icapi_data_pipeline.WorkFlowTrigger.yaml  wf_icapi_data_pipeline.WorkflowVersion.yaml
ice-cream-dataops/modules/bootcamp/use_cases/oee/data_sets/: data_sets.DataSet.yaml
ice-cream-dataops/modules/bootcamp/use_cases/oee/functions/oee_timeseries/: handler.py
