[project]
name = "custom_extractor"
version = "1.0.0"
description = "customised extractor"
authors = [ { name = "Sendil", email = "sendil.sadasivam@cognite.com" } ]
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "cognite-extractor-utils>=7.11.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
    "macholib>=1.16.3 ; sys_platform == 'darwin'", # Used by pyinstaller on Mac OS
    "pefile>=2023.2.7 ; sys_platform == 'win32'", # Used by pyinstaller on Windows
    "pywin32-ctypes>=0.2.3 ; sys_platform == 'win32'", # Used by pyinstaller on Windows
    "mypy>=1.19.0",
    "ruff>=0.14.8",
    "pre-commit>=4.5.0",
]

[project.scripts]
custom_extractor = "custom_extractor.__main__:main"

[tool.ruff]
target-version = "py311"
exclude = [".git", ".mypy_cache", ".ruff_cache"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "T20", "UP"]
ignore = []
fixable = ["A", "B", "C", "D", "E", "F", "I", "UP"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.mypy]
pretty = true
check_untyped_defs = false
ignore_missing_imports = true
disallow_untyped_defs = false
disable_error_code = ["import-untyped"]
follow_imports = "normal"
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
exclude = ["tests/*"]

[tool.hatch.build.targets.wheel]
packages = ["custom_extractor"]

[tool.hatch.build.targets.sdist]
only-include = ["custom_extractor"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
